--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.6.0",
     "downshift": "^8.2.3",
+    "express": "^4.18.2",
     "heroicons": "^2.0.18",
     "next": "^13.5.4",
     "prisma": "^5.6.0",
@@ -21,7 +22,8 @@
     "react-icons": "^4.12.0",
     "reactflow": "^11.10.1",
     "short-uuid": "^4.2.2",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
