--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "reactflow": "^11.10.1",
+    "reactjs-popup": "^2.0.6",
     "short-uuid": "^4.2.2",
     "sqlite3": "^5.1.6",
     "swr": "^2.2.4"
